add tests file