@@ -2,6 +2,7 @@ package tests;
 
 import api.OrderApi;
 import io.qameta.allure.Description;
+import io.qameta.allure.junit4.DisplayName;
 import io.restassured.response.ValidatableResponse;
 import model.OrderData;
 import org.junit.Test;
@@ -20,44 +21,58 @@ public class OrderTest {
 
     private final List<String> colors;
     private final OrderApi orderApi = new OrderApi();
+    private String track;
 
     public OrderTest(List<String> colors) {
-
         this.colors = colors;
     }
 
     @Parameterized.Parameters
     public static Object[][] data() {
         return new Object[][]{
-                {Collections.emptyList()},         // ни один цвет не указан
-                {List.of("BLACK")},          // цвет BLACK указан
-                {List.of("GREY")},           // цвет GREY указан
-                {Arrays.asList("BLACK", "GREY")}   // оба цвета указаны
+                {Collections.emptyList()},         // Никакие цвета не указаны
+                {List.of("BLACK")},                // Указан цвет BLACK
+                {List.of("GREY")},                 // Указан цвет GREY
+                {Arrays.asList("BLACK", "GREY")}   // Указаны оба цвета
         };
     }
 
     @Test
-    @Description("Тест на создание заказа с параметрами цвета.")
+    @DisplayName("A test for creating an order with color parameters")
+    @Description("The ability to create orders when choosing different colors")
     public void createOrderTest() {
         OrderData orderData = new OrderData(colors);
-
-        // Создаем заказ с использованием методов API
-        orderApi.createOrder(orderData)
+        ValidatableResponse response = orderApi.createOrder(orderData);
+        response.log().all()
                 .assertThat()
-                .statusCode(201) // Чтоб заказ был успешно создан
-                .body("track", notNullValue()); // Проверка, что track присутствует
+                .statusCode(201) // Проверка успешного создания заказа
+                .body("track", notNullValue()); // Проверка наличия поля track в ответе
+
+    }
+
+    @Test
+    @DisplayName("Test for receiving an order")
+    @Description("Check that you can get a list of orders when you request it")
+    public void getOrdersTest() {
+        // Получение списка заказов
+        ValidatableResponse response = orderApi.getOrders();
+        response.log().all()
+                .assertThat()
+                .statusCode(200)  // Проверка полученного статуса
+                .body("orders", is(notNullValue())); // Проверка наличия списка заказов
     }
 
 
     @Test
-    @Description("Тест на получение заказа.")
-    public void getOrdersTest() {
-        ValidatableResponse response = orderApi.getOrders();
-
-        response.log().all()
-                .assertThat()
-                .statusCode(200)  // Ожидаемый статус ответа
-                .body("orders", is(notNullValue()));
+    @DisplayName("Deleting an order")
+    @Description("After creating an order, you need to delete it")
+    public void cleanUpTest() {
+        if (track != null) {
+            ValidatableResponse deleteResponse = orderApi.deleteOrders(track);
+            deleteResponse.log().all()
+                    .assertThat()
+                    .statusCode(200); // Проверка успешного удаления заказа
+        }
     }
 }
 
